<resources>
    <string name="app_name">Application</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="next">Sign up</string>
    <string name="welcome2">Please fill your info</string>
    <string name="submit">Submit</string>
    <string name="infotext">Please fill your information</string>
    <string name="go_back">Return to first page</string>
    <string name="videoplay">Play the video</string>
    <string name="loginsubmit">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email1">Email</string>
    <string name="log_in2">Log In</string>
    <string name="password2">Password</string>
    <string name="what">Don\'t have an account? Then sign up</string>
    <string name="major1">Major</string>
    <string name="university">University</string>
    <string name="degree">Degree</string>
</resources>