<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/email1"
        tools:ignore="LabelFor,MissingConstraints,TextFields"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="193dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/password2"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="255dp"
        tools:ignore="LabelFor,MissingConstraints,TextFields"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="113dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginsubmit"
        tools:ignore="DuplicateSpeakableTextCheck,MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="317dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="374dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="422dp" />
</androidx.constraintlayout.widget.ConstraintLayout>