<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="To sign up please enter your info"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="137dp" />

    <EditText
        android:id="@+id/name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/name"
        tools:ignore="HardcodedText,LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="183dp" />

    <EditText
        android:id="@+id/email_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/email"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="252dp"
        tools:ignore="HardcodedText,LabelFor,MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/password_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/password"
        tools:ignore="HardcodedText,LabelFor,MissingConstraints,TextFields"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="315dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/next"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="579dp" />

    <EditText
        android:id="@+id/major2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/major1"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="377dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/university"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="439dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/degree"
        tools:ignore="LabelFor,MissingConstraints"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="507dp" />
</androidx.constraintlayout.widget.ConstraintLayout>